--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     
     # Set up the web server according to the Dockerfile inside the api/ folder
     build: flask-app/
-    container_name: web
+    container_name: Findher_web
     # connect the src folder in on the host machine to the code folder in the container. 
     # note that the code folder in contaier is the working directory (see DockerFile).
     volumes: ['./flask-app:/code', './secrets:/secrets'] 
@@ -29,14 +29,14 @@ services:
   db:
     # We are using the base image of MySQL v.8
     image: mysql:8
-    container_name: db
+    container_name: Findher_db
     volumes:
       # anything in (or mounted in) /docker-entrypoint-initdb.d in the container 
       # will automatically be executed when the container is created
       - ./db:/docker-entrypoint-initdb.d/:ro
 
     ports:
-      # mapping host port 3200 to container port 3306
+      # mapping host port 3200 to container port 3x306
       - 3200:3306
 
     restart: unless-stopped
@@ -59,9 +59,9 @@ services:
   # configure the AppSmith container (borrowed directly from Appsmith)
   appsmith:
     image: index.docker.io/appsmith/appsmith-ce
-    container_name: appsmith
+    container_name: Findher_Appsmith
     ports:
-      - "8080:80"
+      - "8000:80"
       - "4443:443"
     volumes:
       - ./stacks:/appsmith-stacks
