--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,13 +59,23 @@ services:
   # configure the AppSmith container (borrowed directly from Appsmith)
   appsmith:
     image: index.docker.io/appsmith/appsmith-ce
-    container_name: Findher_Appsmith
+    container_name: appsmith
     ports:
-      - "8000:80"
-      - "4443:443"
+      - "80:80"
+      - "443:443"
+      - "9001:9001"
+
     volumes:
       - ./stacks:/appsmith-stacks
     restart: unless-stopped
+
+  auto_update:
+    image: containrrr/watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    # Update check interval in seconds.
+    command: --interval 300 --label-enable --cleanup
+
 
 secrets:
   secret_db_pw:
