--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,11 +59,10 @@ services:
   # configure the AppSmith container (borrowed directly from Appsmith)
   appsmith:
     image: index.docker.io/appsmith/appsmith-ce
-    container_name: appsmith
+    container_name: findher_appsmith
     ports:
       - "80:80"
       - "443:443"
-      - "9001:9001"
 
     volumes:
       - ./stacks:/appsmith-stacks
